--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 
 .name-site {
-    color: #FFF;
+    color: #FFD600;
     font-size: 82px;
     font-weight: 700;
     text-transform: uppercase;
