--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,74 @@ body {
     
     
 }
+
+
+
+.menu-link {
+    color: #1AF8DE;
+    font-family: Inter;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 16px;
+  }
+  
+  .menu-item {
+    margin: 0;
+  }
+  
+
+  .btn-edit {
+    background-color: #E4DC23;
+    border-radius: 78px;
+    font-family: 'Inter', sans-serif;
+    color: #000;
+
+    font-size: 20px;
+    width: 200px;
+    height: 50px;   
+    /* margin: 100px auto; auto для центрирования по горизонтали */
+    margin: 92px 0 10px 79px;
+}
+
+.list-skills {
+    color: #05C001;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    text-decoration: none; 
+    /* width: 200px; */
+}
+
+.list-s {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    /* margin: 0; */
+    margin-top: 10px;
+}
+
+
+.input-skill-name {
+    padding:10px;
+    border-radius:10px;
+}
+
+.input-skill-hour {
+    padding:10px;
+    border-radius:10px;
+}
+
