--- a/css/style.css
+++ b/css/style.css
@@ -103,11 +103,31 @@ body {
 
 .input-skill-name {
     padding:10px;
+    margin-left: 125px;
     border-radius:10px;
 }
 
 .input-skill-hour {
     padding:10px;
+    margin-left: 30px;
     border-radius:10px;
+    width: 220px;
+}
+
+.btn-add-skill {
+    background-color: #E4DC23;
+    border-radius: 78px;
+    font-family: 'Inter', sans-serif;
+    color: #000;
+
+    font-size: 15px;
+    width: 150px;
+    height: 45px;   
+    /* margin: 100px auto; auto для центрирования по горизонтали */
+    /* margin: 0px 0px 0px 790px; */
+}
+
+#list {
+    margin-top: 10px;
 }
 
