--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 
 body {
-    background-color: #270338;
+    /* background-color: #270338; */
+    background-color: #0C1C2B;
 }
 
 
@@ -13,6 +14,15 @@ body {
     text-align: center;
 }
 
+.bg {
+    display: block;
+    margin-left: auto;
+    margin-right: 100px;
+    width: 45%;
+    /* filter: blur(2px); */
+}
+
+
 .description {
     color: #FFF;
     font-size: 40px;
@@ -20,6 +30,13 @@ body {
     font-family: 'Inter', sans-serif;
     text-align: center;
     font-weight: 700;
+
+    position: absolute;
+    top: 30%;
+    left: 25%;
+    width: 50%;
+    /* height: 40%; */
+    transform: translate(-50%, -50%);
 }
 
 .button-start {
@@ -37,7 +54,15 @@ body {
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    
+
+    position: absolute;
+    top: 55%;
+    left: 1%;
+    width: 50%;  
+}
+
+.button-start:hover {
+    background-color: #A3FF00;
     
 }
 
@@ -49,6 +74,7 @@ body {
     font-style: normal;
     font-weight: 700;
     text-decoration: none;
+    transition: color 0.3s; /* Плавное изменение цвета */
 }
 
 .menu {
@@ -66,7 +92,9 @@ body {
   }
   
 
-
+.menu-link:hover {
+    color: #A3FF00;
+}
   
 
   .btn-edit {
@@ -132,4 +160,24 @@ body {
 #list {
     margin-top: 10px;
 }
+
+.link__tg {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    position: absolute;
+    top: 95%;
+    left: 1%
+}
+
+.link__tg-item {
+    font-family: 'Inter', sans-serif;
+    color: #fff;
+    margin-right: 10px;
+}
+
+.link__tg-item:hover {
+    color: #29B6F6;
+}
+
 
