--- a/skilltrackerapp/templates/aboutus.html
+++ b/skilltrackerapp/templates/aboutus.html
@@ -1,120 +1,69 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <title>Трекер навыков</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
-      
-</head>
-<body>
-    
-    <header class="header">
-        <div class="name-site">
-            Skill time tracker
-        </div>
-
-        <div class="heading">
-            <h1 id="headname">Главная</h1>
-        </div>
-
-        <div class="container">
-            <nav class="nav">
-                <ul class="menu">
-                    <li class="menu-item">
-                        <a href="index.html" class="menu-link">Главная</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link" onclick="changeHeader('Аккаунт')">Аккаунт</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="./skills-page.html" class="menu-link" onclick="changeHeader('Мои навыки')">Мои навыки</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link" onclick="changeHeader('Статистика')">Статистика</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="./aboutus.html" class="menu-link active" onclick="changeHeader('О нас')">О нас</a>
-                    </li>
-                </ul>          
-            </nav>
-        </div>
-    </header>
+{% extends 'base.html' %}
 
 
-    <main id="about-us">
-
-        <figure><img class="bg" src="./img/bg.jpg" alt=""></figure>
-
-        <table id="myTable" class="table table-dark" style="table-layout: fixed;">
-            <caption class="table-dark__name">Список разработчиков</caption>
-            <thead>
-              <tr>
-                <th class="th-sort-by-number" onclick="sortTable(0)" scope="col">#</th>
-                <th scope="col">Человек</th>
-                <th scope="col">Должность</th>
-                <th scope="col">Контакты</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Идрисов Ринат</td>
-                <td>Главный разработчик</td>
-                <td><a class="link__tg-item" href="https://t.me/Wizard700">@Wizard700<img class="link__tg-img" src="./img/tg.svg" alt=""></a></td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Габбасова Илина</td>
-                <td>Второй разработчик</td>
-                <td><a class="link__tg-item" href="https://t.me/Ilishka_g">@Ilishka_g<img class="link__tg-img" src="./img/tg.svg" alt=""></a></td>
-              </tr>
-            </tbody>
-          </table>
 
 
-          <form class="feedback-form" onsubmit="formSubmit(this)">
-            <p>Форма обратной связи</p>
-            <fieldset>
-              <legend>Контактная информация</legend>
-                <label for="fname">Имя <em>*</em></label>
-                <input type="text" name="fname" id="fname"><br>
-                <label for="email">Email <em>*</em></label>
-                <input id="email"><br>
-            </fieldset>
-            <fieldset>
-                <label for="comments">Опишите пожелание или проблему:</label><br>    
-                <textarea id="comments"></textarea>
-            </fieldset>
-          
-            <p><input type="submit" value="Отправить"></p>
-          </form>
-  
+{% block styles %}
+{{super()}}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+{% endblock %}
 
 
-    </main>
+{% block title %}
+Трекер навыков
+{% endblock %}
 
-    <footer class="footer">
-        <div class="link">
-            <a class="link__tg" href="https://t.me/Wizard700" target="_blank">
-                <span class="link__tg-item">Developed by: @Wizard700</span>
-                <img class="link__tg-img" src="./img/tg.svg" alt="">
-             </a>
-        </div>
-    </footer>
-    <script src="./js/script.js" defer></script>
-    <script src="./js/sort-table.js"></script>
+{% block menu_link_aboutus %}active{% endblock %}
 
-</body>
-</html>
+{% block content %}
+<main id="about-us">
+    <figure><img class="bg" src="static/img/bg.jpg" alt=""></figure>
+
+    <table id="myTable" class="table table-dark" style="table-layout: fixed;">
+        <caption class="table-dark__name">Список разработчиков</caption>
+        <thead>
+          <tr>
+            <th class="th-sort-by-number" onclick="sortTable(0)" scope="col">#</th>
+            <th scope="col">Человек</th>
+            <th scope="col">Должность</th>
+            <th scope="col">Контакты</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Идрисов Ринат</td>
+            <td>Главный разработчик</td>
+            <td><a class="link__tg-item" href="https://t.me/Wizard700">@Wizard700<img class="link__tg-img" src="./img/tg.svg" alt=""></a></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Габбасова Илина</td>
+            <td>Второй разработчик</td>
+            <td><a class="link__tg-item" href="https://t.me/Ilishka_g">@Ilishka_g<img class="link__tg-img" src="./img/tg.svg" alt=""></a></td>
+          </tr>
+        </tbody>
+    </table>
+
+    <form class="feedback-form" onsubmit="formSubmit(this)">
+        <p>Форма обратной связи</p>
+        <fieldset>
+          <legend>Контактная информация</legend>
+            <label for="fname">Имя <em>*</em></label>
+            <input type="text" name="fname" id="fname"><br>
+            <label for="email">Email <em>*</em></label>
+            <input id="email"><br>
+        </fieldset>
+        <fieldset>
+            <label for="comments">Опишите пожелание или проблему:</label><br>
+            <textarea id="comments"></textarea>
+        </fieldset>
+
+        <p><input type="submit" value="Отправить"></p>
+    </form>
+</main>
+{% endblock %}
+
+{% block sortjs %}
+<script src="./js/sort-table.js"></script>
+{% endblock %}
