--- a/skilltrackerapp/templates/index.html
+++ b/skilltrackerapp/templates/index.html
@@ -1,93 +1,29 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Трекер навыков</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
+{% extends 'base.html' %}
 
-      
-</head>
-<body>
-    
-    <header class="header">
-        <div class="name-site">
-            Skill time tracker
-        </div>
+{% block title %}
+Трекер навыков
+{% endblock %}
 
-        <div class="heading">
-            <h1 id="headname">Главная</h1>
-        </div>
+{% block menu_link_general %}active{% endblock %}
 
-        <div class="container">
-            <nav class="nav">
-                <ul class="menu">
-                    <li class="menu-item">
-                        <a href="index.html" class="menu-link active">Главная</a> <!-- active - выделенный элемент из nav текущей страницы -->
-                    </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link">Аккаунт</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="./skills-page.html" class="menu-link">Мои навыки</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link">Статистика</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="./aboutus.html" class="menu-link">О нас</a>
-                    </li>
-                </ul>          
-            </nav>
-        </div>
-
-    </header>
-
-    
-
-
+{% block content %}
     <main class="main" id="general">
-        <figure>
-        <img class="bg" src="./img/bg.jpg" alt="">
-        </figure>
-        <section class="main__desc">
-            <div class="description">Трекер навыков - это сайт, который поможет отслеживать количество часов, 
-                потраченных на ваши навыки, дела, хобби и прочие действия. </div>
-            
-            <a class="button-start" href="./skills-page.html">Начать отслеживать</a>   
-        </section> 
+            <figure>
+                <img class="bg" src="{{ url_for('static', filename='img/bg.jpg')}}" alt="background-image">
+    <!--        <img class="bg" src="{{ url_for('static', filename='img/bg.jpg')}}" alt="backgroud-image">-->
+    <!--        <img class="bg" src="skilltrackerapp/static/img/bg.jpg" alt="backgroud-image">-->
+            </figure>
+            <section class="main__desc">
+                <div class="description">Трекер навыков - это сайт, который поможет отслеживать количество часов,
+                    потраченных на ваши навыки, дела, хобби и прочие действия. </div>
+                <a class="button-start" href="{{ url_for('skills') }}">Начать отслеживать</a>
+            </section>
 
-        <section>
-            <div class="hidebox">
-                <h3 class="header-why-need">Зачем это нужно?</h3>
-                <p>Отслеживание потраченного времени на свои навыки и занятия может быть очень полезным и эффективным способом оценки своего уровня и прогресса в различных областях. Запись времени, которое ты уделяешь упражнениям, изучению новых материалов или тренировкам, позволит более точно определить, насколько регулярно и предметно ты занимаешься своими увлечениями.</p>
-
-
-            </div>
-            
-        </section>
-
+            <section class="articles">
+                <div class="hidebox">
+                    <h3 class="header-why-need">Зачем это нужно?</h3>
+                    <p>Отслеживание потраченного времени на свои навыки и занятия может быть очень полезным и эффективным способом оценки своего уровня и прогресса в различных областях. Запись времени, которое ты уделяешь упражнениям, изучению новых материалов или тренировкам, позволит более точно определить, насколько регулярно и предметно ты занимаешься своими увлечениями.</p>
+                </div>
+            </section>
     </main>
-
-    <footer class="footer">
-        <div class="link">
-
-            <a class="link__tg" href="https://t.me/Wizard700" target="_blank">
-                <span class="link__tg-item">Developed by: @Wizard700</span>
-                <img class="link__tg-img" src="./img/tg.svg" alt="">
-             </a>
-        </div>
-    </footer>
-    <script src="./js/script.js" defer></script> 
-    <script>
-    
-
-    </script>
-
-</body>
-</html>
+{% endblock %}
