added js and bootstrap link

--- a/skilltrackerapp/templates/aboutus.html
+++ b/skilltrackerapp/templates/aboutus.html
@@ -65,5 +65,6 @@
 {% endblock %}
 
 {% block sortjs %}
-<script src="./js/sort-table.js"></script>
+<script src="static/js/sort-table.js"></script>
 {% endblock %}
+
