--- a/skilltrackerapp/templates/base.html
+++ b/skilltrackerapp/templates/base.html
@@ -63,5 +63,6 @@
 
     <script src="static/js/script.js" defer></script>
     {% block sortjs %}{% endblock %}
+    {% block skillsjs %} {% endblock %}
 </body>
 </html>
