--- a/skilltrackerapp/templates/skills-page.html
+++ b/skilltrackerapp/templates/skills-page.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block styles %}
+{{super()}}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+{% endblock %}
+
+
 {% block title %}
 Трекер навыков
 {% endblock %}
@@ -32,4 +38,8 @@
     </div>
 </div>
 </main>
+{% endblock %}
+
+{% block skillsjs %}
+<script src="static/js/script_skill_page.js"></script>
 {% endblock %}
