new method form send - ajax, and methods http (post)

--- a/skilltrackerapp/static/css/style.css
+++ b/skilltrackerapp/static/css/style.css
@@ -218,6 +218,10 @@ body {
     /* margin: 50px; */
 }
 
+.request-status {
+    margin-left: 500px;
+}
+
 #comments {
     width: 30%;
     height: 100px;
