--- a/skilltrackerapp/templates/base.html
+++ b/skilltrackerapp/templates/base.html
@@ -55,6 +55,7 @@
 
     <script src="static/js/script.js" defer></script>
     {% block sortjs %}{% endblock %}
-    {% block skillsjs %} {% endblock %}
+    {% block skillsjs %}{% endblock %}
+    {% block formsend %}{% endblock %}
 </body>
 </html>
