added user authorization

--- a/skilltrackerapp/static/css/style.css
+++ b/skilltrackerapp/static/css/style.css
@@ -229,4 +229,12 @@ body {
 
 .th-sort-by-number {
     cursor: pointer;
-  }
+}
+
+
+.auth {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
