added ability to create skills (with the addition to DB)

--- a/skilltrackerapp/templates/skills-page.html
+++ b/skilltrackerapp/templates/skills-page.html
@@ -23,7 +23,7 @@
         </div>
         <div class="input-skill">
             <input class="input-skill-name" id="input-skill" type="text" placeholder="Название навыка">
-            <input class="input-skill-hour" id="input-hours" type="text" placeholder="Количество имеющихся часов">
+            <input class="input-skill-hour" id="input-hours" type="number" placeholder="Количество имеющихся часов">
             <button class="btn-add-skill" id="btn-add">Добавить навык</button>
         </div>
         <ul class="list-group" id="list">
