--- a/skilltrackerapp/templates/skills-page.html
+++ b/skilltrackerapp/templates/skills-page.html
@@ -9,7 +9,8 @@
 <main id="my-skills">
 <div class="section-skills">
     <div class="container">
-        <button class="btn-edit">Редактировать</button>
+        <!-- <button class="btn-edit">Редактировать</button> -->
+        <br>
         <div class="list-s">
             <div class="list-skills">
                 Список навыков
