--- a/skilltrackerapp/static/css/nav_auth.css
+++ b/skilltrackerapp/static/css/nav_auth.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Inter', sans-serif;
+    color: #fff;
+    background-color: hsl(209, 56%, 11%);
+}
 
 .menu {
     display: flex;
