--- a/skilltrackerapp/templates/base.html
+++ b/skilltrackerapp/templates/base.html
@@ -31,7 +31,7 @@
 
 
         <input id="burger-toggle" type="checkbox">
-        <label for="burger-toggle">
+        <label class="burger-toggle-label" for="burger-toggle">
             <span></span>
         </label>
         <div class="container">
