--- a/skilltrackerapp/templates/aboutus.html
+++ b/skilltrackerapp/templates/aboutus.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
-{% block styles %}
-{{super()}}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-{% endblock %}
+
 
 {% block adaptive_styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/adaptive.css')}}">
@@ -28,21 +25,21 @@
             <th scope="row">1</th>
             <td>Идрисов Ринат</td>
             <td>Главный разработчик</td>
-            <td><a class="link__tg-item" href="https://t.me/Wizard700">@Wizard700<img class="link__tg-img" src="./img/tg.svg" alt=""></a></td>
+            <td><a class="link__tg-item"  href="https://t.me/Wizard700" target="_blank">@Wizard700<img class="link__tg-img" src="./img/tg.svg" alt=""></a></td>
           </tr>
         </tbody>
     </table>
 
 
-    <div class="request-status">
+    <!-- <div class="request-status">
         <h2>Статус вашего запроса</h2>
         <p id="statusfield"></p>
     </div>
+-->
 
     <form class="feedback-form" onsubmit="formSubmit(this)">
         <p>Форма обратной связи</p>
-        <fieldset>
-          <legend>Контактная информация</legend>
+        <fieldset class="inside-form">
             <label for="fname">Имя</label>
             <input type="text" name="fname" id="fname"><br>
             <label for="email">Email</label>
@@ -54,8 +51,8 @@
                 <option value="problem">Проблема</option>
                 <option value="question">Вопрос</option>
             </select><br>
-        </fieldset>
-        <fieldset>
+        </fieldset class="inside-form">
+        <fieldset class="inside-form">
             <label for="comments">Опишите пожелание или проблему:</label><br>
             <textarea name="reqtext" id="comments"></textarea>
         </fieldset>
